@@ -69,6 +69,6 @@ public class FeedEntry {
     }
 
     private boolean isEmptyString(String str) {
-        return str == null || str.isBlank() || str.isEmpty();
+        return str == null || str.isEmpty() || str.trim().isEmpty();
     }
 }
